--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Katova - Building Digital Product</title>
+  <title>Kakava - Building Digital Product</title>
 
   <!-- 
     - favicon
@@ -40,12 +40,12 @@
   <header class="header" data-header>
     <div class="container">
 
-      <a href="#" class="logo">  ⁛  Katova </a>
+      <a href="#" class="logo">  ⁛  Kakava </a>
 
       <nav class="navbar" data-navbar>
 
         <div class="wrapper">
-          <a href="#" class="logo">Katova</a>
+          <a href="#" class="logo">Kakava</a>
 
           <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
             <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
@@ -115,7 +115,7 @@
             </h1>
 
             <p class="hero-text">
-              At Katova we specialize in designing logo for a brand, sosial media management, photo & videography.
+              At Kakava we specialize in designing logo for a brand, sosial media management, photo & videography.
               Let's cooperate with us.
             </p>
 
@@ -347,7 +347,7 @@
                     <h3 class="h3 card-title">Fast working process</h3>
 
                     <p class="card-text">
-                      At Katova we specialize in designing, sosial media management, photo & videography.
+                      At Kakava we specialize in designing, sosial media management, photo & videography.
                     </p>
                   </div>
 
@@ -365,7 +365,7 @@
                     <h3 class="h3 card-title">Dedicated team</h3>
 
                     <p class="card-text">
-                      At Katova we specialize in designing, sosial media management, photo & videography.
+                      At Kakava we specialize in designing, sosial media management, photo & videography.
                     </p>
                   </div>
 
@@ -383,7 +383,7 @@
                     <h3 class="h3 card-title">24/7 hours support</h3>
 
                     <p class="card-text">
-                      At Katova we specialize in designing, sosial media management, photo & videography.
+                      At Kakava we specialize in designing, sosial media management, photo & videography.
                     </p>
                   </div>
 
@@ -411,7 +411,7 @@
           <p class="section-subtitle has-before text-center">Projects</p>
 
           <h2 class="h2 section-title text-center">
-            Katova complete <span class="has-before">project</span>
+            Kakava complete <span class="has-before">project</span>
           </h2>
 
           <ul class="filter-list">
@@ -605,7 +605,7 @@
 
                 <figure class="card-banner">
                   <img src="./assets/images/blog-1.jpg" width="644" height="363" loading="lazy"
-                    alt="Katova unlock your brands true potential" class="img-cover">
+                    alt="Kakava unlock your brands true potential" class="img-cover">
                 </figure>
 
                 <div class="card-content">
@@ -621,11 +621,11 @@
                   </div>
 
                   <h3>
-                    <a href="#" class="card-title">Katova Creative</a>
+                    <a href="#" class="card-title">Kakava Creative</a>
                   </h3>
 
                   <p class="card-text">
-                    Unlock your brands true potential and get to your goals, Katova specialize in designing logo for a brand, sosial media management, photo & videography.
+                    Unlock your brands true potential and get to your goals, Kakava specialize in designing logo for a brand, sosial media management, photo & videography.
                   </p>
 
                 </div>
@@ -638,7 +638,7 @@
 
                 <figure class="card-banner">
                   <img src="./assets/images/blog-2.jpg" width="202" height="162" loading="lazy"
-                    alt="Katova solution for every new brands" class="img-cover">
+                    alt="Kakava solution for every new brands" class="img-cover">
                 </figure>
 
                 <div class="card-content">
@@ -654,7 +654,7 @@
                   </div>
 
                   <h3 class="h3">
-                    <a href="#" class="card-title">Katova solution for every new brands</a>
+                    <a href="#" class="card-title">Kakava solution for every new brands</a>
                   </h3>
 
                 </div>
@@ -743,7 +743,7 @@
 
         <div class="footer-brand">
 
-          <p class="footer-list-title">About Katova</p>
+          <p class="footer-list-title">About Kakava</p>
 
           <p class="footer-text">
             Elevating  Your Brand's Vision and Success
@@ -838,7 +838,7 @@
         <ul class="footer-list">
 
           <li>
-            <p class="footer-list-title">Instagram post <a href="https://instagram.com/katova.creative?igshid=OGQ5ZDc2ODk2ZA==" class="ig-katova">@katova.creative</a></p>
+            <p class="footer-list-title">Instagram post <a href="#" class="ig-katova">@kakava.creative</a></p>
           </li>
 
           <li>
@@ -944,7 +944,7 @@
       <div class="footer-bottom">
 
         <p class="copyright">
-          &copy; 2023 Katova. All Rights Reserved by rrsavitriyanis
+          &copy; 2023 Kakava. All Rights Reserved by rrsavitriyanis
         </p>
 
         <ul class="footer-bottom-list">
